syntax = "proto3";

package svc_ads;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "svc-auth/proto/svc_auth.proto";

option go_package = "github.com/u-shylianok/ad-service/svc-ads/client/ads";

service AdService {
    rpc GetAd(GetAdRequest) returns (GetAdResponse) {}
    rpc ListAds(ListAdsRequest) returns (ListAdsResponse) {}
    rpc SearchAds(SearchAdsRequest) returns (SearchAdsResponse) {}

    rpc CreateAd(CreateAdRequest) returns (Ad) {}
    rpc UpdateAd(UpdateAdRequest) returns (Ad) {}
    rpc DeleteAd(DeleteAdRequest) returns (google.protobuf.Empty) {}

    rpc ListPhotos(ListPhotosRequest) returns (ListPhotosResponse) {}
    rpc ListTags(ListTagsRequest) returns (ListTagsResponse) {}
}

message GetAdRequest {
    uint32 id = 1;
    GetAdOptionalRequest optional = 2;
}

message GetAdResponse {
    AdResponse ad = 1;
}

message GetAdOptionalRequest {
    bool description = 1;
	bool photos = 2;
    bool tags = 3;
}

message ListAdsRequest {
    repeated SortingParam sorting_params = 1;
}

message SortingParam {
    string field = 1;
    bool is_desc = 2;
}

message ListAdsResponse {
    repeated AdResponse ads = 1;
}

message SearchAdsRequest {
    AdFilter filter = 1;
}

message AdFilter {
    string username = 1;
    google.protobuf.Timestamp start_date = 2;
    google.protobuf.Timestamp end_date = 3;
    repeated string tags = 4;
}

message SearchAdsResponse {
    repeated AdResponse ads = 1;
}

message AdRequest {
    string name = 1;
    int32 price = 2;
    string description = 3;
    string photo = 4;
    repeated string photos = 5;
    repeated string tags = 6;
}

message CreateAdRequest {
    uint32 user_id = 1;
    AdRequest ad = 2;
}

message UpdateAdRequest {
    uint32 user_id = 1;
    uint32 ad_id = 2;
    AdRequest ad = 3;
}

message DeleteAdRequest {
    uint32 user_id = 1;
    uint32 ad_id = 2;
}

message Ad {
    uint32 id = 1;
    uint32 user_id = 2;
    string name = 3;
    google.protobuf.Timestamp date = 4;
    int32 price = 5;
    string description = 6;
    string photo = 7;
    repeated string photos = 8;
    repeated string tags = 9;
}

message AdResponse {
    Ad ad = 1;
    svc_auth.User user = 2;
}

message ListPhotosRequest {
    uint32 ad_id = 1;
}

message ListPhotosResponse {
    repeated string photos = 1;
}

message ListTagsRequest {
    uint32 ad_id = 1;
}

message ListTagsResponse {
    repeated string tags = 1;
}
